Cleanup sklearn section

--- a/pd_sklearn_ds.ipynb
+++ b/pd_sklearn_ds.ipynb
@@ -4686,7 +4686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 68,
    "metadata": {
     "collapsed": false
    },
@@ -4733,7 +4733,7 @@
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>14.9</td>\n",
-       "      <td>6.7</td>\n",
+       "      <td>14.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -4751,7 +4751,7 @@
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>18.9</td>\n",
-       "      <td>0.9</td>\n",
+       "      <td>18.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -4769,7 +4769,7 @@
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>15.9</td>\n",
-       "      <td>1.3</td>\n",
+       "      <td>15.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -4787,7 +4787,7 @@
        "      <td>0.2</td>\n",
        "      <td>0</td>\n",
        "      <td>12.3</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>12.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -4805,7 +4805,7 @@
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>13.2</td>\n",
-       "      <td>1.8</td>\n",
+       "      <td>13.2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -4820,20 +4820,20 @@
        "4  8  6   mar  sun  89.3  51.3  102.2  9.6  11.4  99   1.8   0.0     0   \n",
        "\n",
        "   wind_plus_temp  wind_plus_temp2  \n",
-       "0            14.9              6.7  \n",
-       "1            18.9              0.9  \n",
-       "2            15.9              1.3  \n",
-       "3            12.3              4.0  \n",
-       "4            13.2              1.8  "
+       "0            14.9             14.9  \n",
+       "1            18.9             18.9  \n",
+       "2            15.9             15.9  \n",
+       "3            12.3             12.3  \n",
+       "4            13.2             13.2  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.eval('wind_plus_temp2 = wind + area') # This is generally the preferred way, as it's a little cleaner. \n",
+    "df.eval('wind_plus_temp2 = wind + temp') # This is generally the preferred way, as it's a little cleaner. \n",
     "df.head()"
    ]
   },
@@ -6124,7 +6124,17 @@
    "source": [
     "# Scikit-Learn\n",
     "\n",
-    "Tonight we're going to walk through running a model, and looking at the results. \n",
+    "Tonight we're going to walk through running a model, and looking at the results. Before we get started let's go over some terminology...\n",
+    "\n",
+    "### Terminology\n",
+    "\n",
+    "1.) `features` - Another word for the X variables, independent variables, regressors...   \n",
+    "2.) `target` - Another word for the Y variable, dependent variable, outcome variable, response...  \n",
+    "3.) `model` - What we use to relate one set of variables to another.      \n",
+    "4.) `feature engineering` - Refers to the process of manipulating your features, creating new ones, etc. before feeding the data into your model.   \n",
+    "5.) `training data set` - Refers to the observations from your data set that are used to train/learn the statistical model.   \n",
+    "6.) `testing data set` - Refers to the observations from your data that are **not** used to train/learn the statistical model. They are held out, and not seen by the model during training. \n",
+    "7.) `hyperparameters` - Stay tuned... it's a little hard to put into words, but remind me if I don't discuss it h\n",
     "\n",
     "### Scikit-learn import\n",
     "\n",
@@ -6132,7 +6142,7 @@
     "import sklearn \n",
     "```\n",
     "\n",
-    "Typically we're actually going to be importing something from one of the modules/libraries in `sklearn`. The [sklearn main page](http://scikit-learn.org/stable/) can help you determine where you might find something that you are looking for, and the [API reference](http://scikit-learn.org/stable/modules/classes). A large majority of all of the machine learning algorithms you might run can be found somewhere within `sklearn`. Today we're going to talk through using a `Random Forest Regressor`.\n",
+    "Typically we're actually going to be importing something from one of the modules/libraries in `sklearn`. The [sklearn main page](http://scikit-learn.org/stable/) can help you determine where you might find something that you are looking for, and the [API reference](http://scikit-learn.org/stable/modules/classes) is also pretty helpful. A large majority of all of the machine learning algorithms you might run can be found somewhere within `sklearn`. Today we're going to talk through using a `Random Forest Regressor`.\n",
     "\n",
     "### General workflow\n",
     "\n",
@@ -6142,6 +6152,8 @@
     "2.) Instantiate the model (i.e. create a variable that holds your model object). Set any hyperparameters as you see fit (we'll discuss what these are shortly).   \n",
     "3.) Feed in the X and Y variables (features and target) to the `.fit()` method.   \n",
     "4.) Call the `.score()` or `.predict()` method to see how well the model does on the training data (or new data). \n",
+    "\n",
+    "##### What would be another word/term we might use to describe the `new data` from step (4) above?\n",
     "\n",
     "We'll be working with a `RandomForestRegressor` tonight, which you can see the documentation for [here](http://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestRegressor.html). "
    ]
@@ -6162,13 +6174,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's create our features (X variables) and target(Y variable). I'm using the forest-fire \n",
-    "data, and for now am only going to use the `X` and `Y` columns (which are the spatial coordinates of the fires) for the features, and the `area` column for the target (this is defined as the dependent variable on the UCI website where I got this data). "
+    "Let's create our features (X variables) and target (Y variable). I'm using the forest-fire \n",
+    "data, and for now am only going to use the `X` and `Y` columns (which are the spatial coordinates of the fires) for the features, and the `area` column for the target (this is defined as the dependent variable on the UCI website where I got this data). A link to the data and it's description can be found [here](https://archive.ics.uci.edu/ml/datasets/Forest+Fires). "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
@@ -6192,10 +6204,10 @@
        "      <th>temp</th>\n",
        "      <th>RH</th>\n",
        "      <th>wind</th>\n",
+       "      <th>rain</th>\n",
        "      <th>area</th>\n",
-       "      <th>wind_plus)area</th>\n",
-       "      <th>wind_plus_area</th>\n",
-       "      <th>wind_plus_area2</th>\n",
+       "      <th>wind_plus_temp</th>\n",
+       "      <th>wind_plus_temp2</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -6212,9 +6224,9 @@
        "      <td>8.2</td>\n",
        "      <td>51</td>\n",
        "      <td>6.7</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>6.7</td>\n",
-       "      <td>6.7</td>\n",
+       "      <td>14.9</td>\n",
        "      <td>6.7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -6230,9 +6242,9 @@
        "      <td>18.0</td>\n",
        "      <td>33</td>\n",
        "      <td>0.9</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>0.9</td>\n",
+       "      <td>18.9</td>\n",
        "      <td>0.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -6248,9 +6260,9 @@
        "      <td>14.6</td>\n",
        "      <td>33</td>\n",
        "      <td>1.3</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>1.3</td>\n",
+       "      <td>15.9</td>\n",
        "      <td>1.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -6266,9 +6278,9 @@
        "      <td>8.3</td>\n",
        "      <td>97</td>\n",
        "      <td>4.0</td>\n",
+       "      <td>0.2</td>\n",
        "      <td>0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>12.3</td>\n",
        "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -6284,9 +6296,9 @@
        "      <td>11.4</td>\n",
        "      <td>99</td>\n",
        "      <td>1.8</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>1.8</td>\n",
+       "      <td>13.2</td>\n",
        "      <td>1.8</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -6294,22 +6306,22 @@
        "</div>"
       ],
       "text/plain": [
-       "   X  Y month  day  FFMC   DMC     DC  ISI  temp  RH  wind  area  \\\n",
-       "0  7  5   mar  fri  86.2  26.2   94.3  5.1   8.2  51   6.7     0   \n",
-       "1  7  4   oct  tue  90.6  35.4  669.1  6.7  18.0  33   0.9     0   \n",
-       "2  7  4   oct  sat  90.6  43.7  686.9  6.7  14.6  33   1.3     0   \n",
-       "3  8  6   mar  fri  91.7  33.3   77.5  9.0   8.3  97   4.0     0   \n",
-       "4  8  6   mar  sun  89.3  51.3  102.2  9.6  11.4  99   1.8     0   \n",
+       "   X  Y month  day  FFMC   DMC     DC  ISI  temp  RH  wind  rain  area  \\\n",
+       "0  7  5   mar  fri  86.2  26.2   94.3  5.1   8.2  51   6.7   0.0     0   \n",
+       "1  7  4   oct  tue  90.6  35.4  669.1  6.7  18.0  33   0.9   0.0     0   \n",
+       "2  7  4   oct  sat  90.6  43.7  686.9  6.7  14.6  33   1.3   0.0     0   \n",
+       "3  8  6   mar  fri  91.7  33.3   77.5  9.0   8.3  97   4.0   0.2     0   \n",
+       "4  8  6   mar  sun  89.3  51.3  102.2  9.6  11.4  99   1.8   0.0     0   \n",
        "\n",
-       "   wind_plus)area  wind_plus_area  wind_plus_area2  \n",
-       "0             6.7             6.7              6.7  \n",
-       "1             0.9             0.9              0.9  \n",
-       "2             1.3             1.3              1.3  \n",
-       "3             4.0             4.0              4.0  \n",
-       "4             1.8             1.8              1.8  "
+       "   wind_plus_temp  wind_plus_temp2  \n",
+       "0            14.9              6.7  \n",
+       "1            18.9              0.9  \n",
+       "2            15.9              1.3  \n",
+       "3            12.3              4.0  \n",
+       "4            13.2              1.8  "
       ]
      },
-     "execution_count": 107,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6319,20 +6331,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### How do I pull the X and Y columns from our df to use as the features? How about the area?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "features = df[['X','Y']]\n",
-    "target = df['area']"
+    "# Cell to get the features and target. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
@@ -6347,18 +6365,19 @@
        "           verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "random_forest.fit(features, target) # Fit/train the model (i.e. build the model based off the training)"
+    "# Fit/train the model (i.e. build the model based off the training data)\n",
+    "random_forest.fit(features, target) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 72,
    "metadata": {
     "collapsed": false
    },
@@ -6366,10 +6385,10 @@
     {
      "data": {
       "text/plain": [
-       "0.032297138999585639"
+       "0.032737203289237682"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6506,6 +6525,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### What do you think went wrong here? Don't look ahead!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "What went wrong here? It turns out that most of the algorithms we use don't accept strings as inputs, but rather expect numeric values. The way to fix this would be to create dummy variables for the months (I'll leave that as an exercise for you). \n",
     "\n",
     "So, we have run two models now, and saw that the second one performed better. We could keep adding in variables into our model, checking the R^2 and our MSE after adding in any variable. But we're not actually running our model on any data that we aren't training it on, so how do we know that what we are putting into our model would actually help on data that we've never seen. In other words, how do we tell if our model will generalize well? The answer is **cross validation**.\n",
@@ -6547,6 +6573,13 @@
     "target = df['area']\n",
     "results = cross_val_score(random_forest, features, target, cv=20, scoring='mean_squared_error')\n",
     "results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Anybody want to take a guess at why we're getting negative mean squared error values?"
    ]
   },
   {
@@ -6594,6 +6627,13 @@
     "target = df['area']\n",
     "results = cross_val_score(random_forest, features, target, cv=20, scoring='mean_squared_error')\n",
     "-results.mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So it looks like `wind` wasn't actually as helpful as we though. Good think we used cross-validation!"
    ]
   },
   {
@@ -6807,8 +6847,10 @@
     "1.) Import whatever model you'll be fitting.  \n",
     "2.) Instantiate the model (i.e. create a variable that holds your model object). Set any hyperparameters as you see fit (we'll discuss what these are shortly).   \n",
     "3.) Feed in the X and Y variables (features and target) to the `.fit()` method.   \n",
-    "4.) Call the `.score()` or `.predict()` method to see how well the model does on the training data (or new data). \n",
-    "5.) Repeat steps (2) - (4) to find the best model given your chosen scoring metric. "
+    "4.) Call the `.score()` or `.predict()` method to see how well the model does on the training data (or new data).   \n",
+    "5.) Repeat steps (2) - (4) to find the best model given your chosen scoring metric.\n",
+    "\n",
+    "**Note**: This assumes that all of your feature engineering/variable manipulation is done. "
    ]
   },
   {
