Perform final cleanup

--- a/pd_sklearn_ds.ipynb
+++ b/pd_sklearn_ds.ipynb
@@ -317,6 +317,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Empty cell for answer. "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {
     "collapsed": false
@@ -1001,7 +1012,7 @@
     }
    ],
    "source": [
-    "df.loc[:, 'a'] # Note that df.loc[:, 1] would fail here. "
+    "df.loc[:, 'a'] # Note that df.loc[:, 1] would fail here. Why?"
    ]
   },
   {
@@ -1080,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 75,
    "metadata": {
     "collapsed": false
    },
@@ -1091,7 +1102,7 @@
        "Index([u'T', u'F'], dtype='object')"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1160,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 76,
    "metadata": {
     "collapsed": false
    },
@@ -1187,30 +1198,22 @@
        "      <td>3</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>F</th>\n",
-       "      <td>4</td>\n",
-       "      <td>5</td>\n",
-       "      <td>6</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "   a  b  c   d\n",
-       "T  1  2  3 NaN\n",
-       "F  4  5  6   7"
+       "T  1  2  3 NaN"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[:'F']"
+    "df[:'T']"
    ]
   },
   {
@@ -1246,13 +1249,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 78,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# Empty cell for answer "
+    "# Empty cell for answer \n"
    ]
   },
   {
@@ -1750,7 +1753,7 @@
    "source": [
     "## What else can I do with my data?\n",
     "\n",
-    "Anything! The world is your oyster! Seriously, though, chances are high that you can do whatever you're imagining (within reason) with your data in a Pandas DataFrame. I've already mentioned that Pandas DataFrame's are based off R's dataframes, and so anything you can do in R's dataframes, I imagine you can do in Pandas DataFrames. For those of you from SQL, though, I imagine you can do pretty much anything you would want to do in SQL in Pandas DataFrames (with some slightly different syntax). \n",
+    "Anything! The world is your oyster! Seriously, though, chances are high that you can do whatever you're imagining (within reason) with your data in a Pandas DataFrame. I've already mentioned that Pandas DataFrame's are based off R's dataframes, and so anything you can do in R's dataframes, I imagine you can do in Pandas DataFrames. For those of you from SQL, I imagine you can also do pretty much anything you would want to do in SQL in Pandas DataFrames (with some slightly different syntax). \n",
     "\n",
     "Starting with `groupby`'s..."
    ]
@@ -6133,8 +6136,8 @@
     "3.) `model` - What we use to relate one set of variables to another.      \n",
     "4.) `feature engineering` - Refers to the process of manipulating your features, creating new ones, etc. before feeding the data into your model.   \n",
     "5.) `training data set` - Refers to the observations from your data set that are used to train/learn the statistical model.   \n",
-    "6.) `testing data set` - Refers to the observations from your data that are **not** used to train/learn the statistical model. They are held out, and not seen by the model during training. \n",
-    "7.) `hyperparameters` - Stay tuned... it's a little hard to put into words, but remind me if I don't discuss it h\n",
+    "6.) `testing data set` - Refers to the observations from your data that are **not** used to train/learn the statistical model. They are held out, and not seen by the model during training.  \n",
+    "7.) `hyperparameters` - Stay tuned... it's a little hard to put into words, but remind me if I don't discuss it later. \n",
     "\n",
     "### Scikit-learn import\n",
     "\n",
@@ -6534,13 +6537,13 @@
    "source": [
     "What went wrong here? It turns out that most of the algorithms we use don't accept strings as inputs, but rather expect numeric values. The way to fix this would be to create dummy variables for the months (I'll leave that as an exercise for you). \n",
     "\n",
-    "So, we have run two models now, and saw that the second one performed better. We could keep adding in variables into our model, checking the R^2 and our MSE after adding in any variable. But we're not actually running our model on any data that we aren't training it on, so how do we know that what we are putting into our model would actually help on data that we've never seen. In other words, how do we tell if our model will generalize well? The answer is **cross validation**.\n",
+    "So, we have run two models now, and saw that the second one performed better. We could keep adding variables into our model, checking the R^2 and our MSE after adding in any variable. But we're not actually running our model on any data that we aren't training it on, so how do we know that what we are putting into our model would actually help on data that we've never seen. In other words, how do we tell if our model will generalize well? The answer is **cross validation**.\n",
     "\n",
     "The way that **cross validation** works is that we break our data into `k` number of folds (typically 5 or 10). We train our model on `k-1` of those folds, and then predict on the `kth` fold. We take those predictions, and then get our scoring metric (`mean squared error`, in our case) using those predictions. We then do this again, and again, and again, until each of the `k` folds has been used for predictions (so with 5 folds, we do this 5 times, and with 10 folds, 10 times, etc.)\n",
     "\n",
     "![cross-val-image](http://i.stack.imgur.com/1fXzJ.png)\n",
     "\n",
-    "Using **cross validation**, we can get an idea of how our model would perform on data it hasn't seen before, and then when we add in variables into our model (or change model parameters), we can be more sure that they were actually worth putting into our model.\n",
+    "Using **cross validation**, we can get an idea of how our model would perform on data it hasn't seen before, and then when we add in variables into our model (or change model hyperparameters), we can be more sure that they were actually worth putting into our model.\n",
     "\n",
     "Best of all, it turns out that sklearn has a library we can use for this! Check out the [cross validation library](http://scikit-learn.org/stable/modules/classes#module-sklearn.cross_validation) for all the details. Today we'll be looking at the `cross_val_score` function, which allows you to pass in a model, a target (Y), a feature set (X), a number of folds (5 or 10, for example), and a scoring function (we'll use our mean_squared_error). "
    ]
@@ -6633,14 +6636,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So it looks like `wind` wasn't actually as helpful as we though. Good think we used cross-validation!"
+    "So it looks like `wind` might not have been as helpful as we thought. Good think we used cross-validation!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cross-validation is a crucial part of a data-scientists workflow. We have to make sure that our model will generalize well, and cross-validation is a way to make sure that we are putting the right variables into our model. It can also be used to check our model hyper-parameters (for a random forest, this might be the number of trees, the depth of each tree, etc.). `Sklearn` also has a built in to perform cross-validation over hyperparameters. It is located in the `sklearn.grid_search` module, and it is called `GridSearchCV`. As arguments, it takes an estimator/model (such as our Random Forest) and a parameter grid (dictionary). We instantiate it with these, and then we call the `.fit()` method on it, passing it our features and target. It returns back to us the best parameters to use for our model. "
+    "Cross-validation is a crucial part of a data-scientists workflow. We have to make sure that our model will generalize well, and cross-validation is a way to make sure that we are putting the right variables into our model. It can also be used to check our model hyperparameters (for a random forest, this might be the number of trees, the depth of each tree, etc.). `Sklearn` also has a built in to perform cross-validation over hyperparameters. It is located in the `sklearn.grid_search` module, and it is called `GridSearchCV`. As arguments, it takes an estimator/model (such as our Random Forest) and a parameter grid (dictionary). We instantiate it with these, and then we call the `.fit()` method on it, passing it our features and target. It returns back to us the best parameters to use for our model. "
    ]
   },
   {
@@ -6845,7 +6848,7 @@
     "With all this being said, we can kind of re-define/re-work the steps in our general workflow... \n",
     "\n",
     "1.) Import whatever model you'll be fitting.  \n",
-    "2.) Instantiate the model (i.e. create a variable that holds your model object). Set any hyperparameters as you see fit (we'll discuss what these are shortly).   \n",
+    "2.) Instantiate the model (i.e. create a variable that holds your model object). Set any hyperparameters as you see fit.   \n",
     "3.) Feed in the X and Y variables (features and target) to the `.fit()` method.   \n",
     "4.) Call the `.score()` or `.predict()` method to see how well the model does on the training data (or new data).   \n",
     "5.) Repeat steps (2) - (4) to find the best model given your chosen scoring metric.\n",
