Clarify and fix!

--- a/exploring_data/Exploring Data with Python using Jupyter Notebooks.ipynb
+++ b/exploring_data/Exploring Data with Python using Jupyter Notebooks.ipynb
@@ -65,7 +65,7 @@
     "__Load our starter code using Jupyter:__\n",
     "\n",
     "1. Launch Jupyter. There are two ways to do this:\n",
-    "    1. If you're confortable in the shell, run the command `jupyter notebook`\n",
+    "    1. If you're confortable in the terminal, run the command `jupyter notebook`\n",
     "    2. Otherwise, use `Anaconda Navigator` to launch Jupyter.\n",
     "2. Using the Jupyter window that opens in your browser, navigate to where you saved & unzipped the starter code.\n",
     "3. Click on THIS notebook to open it. You should now see this notebook on your own computer screen!\n",
@@ -104,7 +104,7 @@
     "\n",
     "# This next line is a Jupyter directive. It tells Jupyter that we want our plots to show\n",
     "# up right below the code that creates them.\n",
-    "%pylab inline"
+    "%matplotlib inline"
    ]
   },
   {
@@ -129,7 +129,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Let's read some data!"
+    "# Let's read some data!\n",
+    "\n",
+    "This data was obtained from https://data.texas.gov/"
    ]
   },
   {
@@ -364,7 +366,7 @@
    "source": [
     "... yep, that spike is at 'Location Room Capacity' == 1.\n",
     "\n",
-    "There seems to be way too many hotels with 'Location Room Capacity' == 1. It's possible that whoever created this dataset is filling all \"unknown values\" with the value 1. We might want to remove all the rows where 'Location Room Capacity' == 1. If you decide to remove those rows, uncomment the code in the cell below and run it."
+    "There seems to be way too many hotels with 'Location Room Capacity' == 1. It's possible that whoever created this dataset is filling all \"unknown values\" with the value 1. It's too soon to tell... we'll come back to this later."
    ]
   },
   {
@@ -375,10 +377,13 @@
    },
    "outputs": [],
    "source": [
-    "# There are too many rows with 'Location Room Capacity' == 1 to impute the values.\n",
-    "# So... we'll just drop those rows.\n",
-    "\n",
-    "# UNCOMMENT THE THREE LINES BELOW IF YOU WANT TO DROP THESE BAD ROWS.\n",
+    "#\n",
+    "# UNCOMMENT THE THREE LINES BELOW ON YOUR _SECOND_ PASS THROUGH THIS NOTEBOOK.\n",
+    "#\n",
+    "# Don't uncomment the lines below on the FIRST pass through this notebook.\n",
+    "# We'll have you come back here later. The lines below drop the 'bad' rows\n",
+    "# in the dataset.\n",
+    "#\n",
     "\n",
     "#print(\"Orig size:\", dataframe.shape)\n",
     "#dataframe = dataframe[dataframe['Location Room Capacity'] > 1]\n",
@@ -794,6 +799,21 @@
     "# was overall true for the entire dataset.\n",
     "print('July Avg:', city_income_per_room_per_night[7].mean())\n",
     "print('Aug Avg: ', city_income_per_room_per_night[8].mean())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Yep. Seems like on average hotels' month of July was better than August.\n",
+    "\n",
+    "... but... remember how we saw that Buda had a REALLY GOOD month of July? We need to look into that more. We'll leave that as an exercise for you! Figure out if:\n",
+    "1. Buda really did have a REALLY GOOD month in July, or\n",
+    "2. We are seeing some data-entry error... in which case we need to fix it and re-run our analysis.\n",
+    "\n",
+    "__Let us know what you find!__"
    ]
   },
   {
