Reword the 'exploring data' tutorial

--- a/exploring_data/Exploring Data with Python using Jupyter Notebooks.ipynb
+++ b/exploring_data/Exploring Data with Python using Jupyter Notebooks.ipynb
@@ -6,36 +6,28 @@
    "source": [
     "# Exploring Data with Python using Jupyter Notebooks\n",
     "\n",
-    "### Objectives:\n",
+    "### Quick Note\n",
     "\n",
-    "By the end of this meetup, you'll be able to:\n",
+    "If you are not familiar with the syntax of Python, you might want to start with [these basic Python resources](https://github.com/GalvanizeOpenSource/python-resources/tree/master/basic_resources) first!\n",
+    "\n",
+    "If you want a more in-depth dive into Python + practice using Python, we suggest you take our [Intro to Python Evening Course](http://www.galvanize.com/courses/intro-to-python/).\n",
+    "\n",
+    "### Objectives\n",
+    "\n",
+    "By the end of this tutorial, you'll be able to:\n",
     "\n",
     "- install Anaconda\n",
     "- launch, run, and modify a Jupyter notebook\n",
-    "- use Python and Pandas to analyse a dataset of Hotel Receipts\n",
-    "\n",
-    "### Outline:\n",
-    "\n",
-    "- __What is Data Science?__ (slide deck)\n",
-    "- __Intro to Python:__ (live demo)\n",
-    "    - use the Python shell\n",
-    "    - write a Python script\n",
-    "    - use Jupyter\n",
-    "- __Lab Time:__ Work through this Jupyter Notebook\n",
-    "    - introduce the dataset: \"Hotel Occupancy Tax Receipts\"\n",
-    "    - encourage pairing, and begin!\n",
-    "- __Wrap-up:__ (if time permits)\n",
-    "    - Did you find anything cool or interesting?\n",
-    "    - What are some shortcomings of this dataset?"
+    "- use Python and Pandas to analyse a dataset of Hotel Receipts"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Possible Goals\n",
+    "### Possible Business Goals\n",
     "\n",
-    "This document will get part-way (more-or-less) to each of the following goals:\n",
+    "This document will get part-way (more-or-less) to each of the following business goals:\n",
     "\n",
     "1. Inform an investor where he should build his next hotel (a first-pass market research effort).\n",
     "\n",
@@ -48,11 +40,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Instructions\n",
+    "### Instructions\n",
     "\n",
-    "THE FOLLOWING IS YOUR GUIDE DURING _LAB TIME_.\n",
-    "\n",
-    "For all of the following, know that we are here to help! Ask us for help if you need it. :)\n",
+    "The follwing instructions assume that you have little to no experience using GitHub or Jupyter. In that case, you are probably viewing this document on [GitHub.com](https://github.com/). That's fine for *viewing* purposes, but if you want to be able to *run* the code in this document, you'll have to do some extra work. See the instructions below:\n",
     "\n",
     "__Prep your computer:__\n",
     "\n",
@@ -72,9 +62,9 @@
     "\n",
     "__Begin Programming!__\n",
     "\n",
-    "1. Read every English sentence, and run every cell of python code.\n",
-    "2. The world is your oyster--if you want to modify the code, DO IT!\n",
-    "3. When you reach the end, write some extra code to answer the one of the \"Possible Goals\" in the section above."
+    "Congrats! You are now ready to run the code in this notebook! Continue below by reading every English sentence and running every cell of code. When you reach the end, write some extra code to answer the one of the \"Possible Business Goals\" in the section above.\n",
+    "\n",
+    "___"
    ]
   },
   {
@@ -813,7 +803,18 @@
     "1. Buda really did have a REALLY GOOD month in July, or\n",
     "2. We are seeing some data-entry error... in which case we need to fix it and re-run our analysis.\n",
     "\n",
-    "__Let us know what you find!__"
+    "__Let us know what you find!__\n",
+    "\n",
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Want More?\n",
+    "\n",
+    "If you enjoyed this tutorial, you will LOVE our [Data Science Immersive](http://www.galvanize.com/courses/data-science/) program. It's 12 weeks of kicking the \\*\\*\\*\\* out of data + the ability to call yourself a *Data Scientist* by the end. :) I'll see you there."
    ]
   },
   {
@@ -842,7 +843,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
