Reword the 'exploring data' tutorial

--- a/exploring_data/Exploring Data with Python using Jupyter Notebooks.ipynb
+++ b/exploring_data/Exploring Data with Python using Jupyter Notebooks.ipynb
@@ -814,7 +814,13 @@
    "source": [
     "# Want More?\n",
     "\n",
-    "If you enjoyed this tutorial, you will LOVE our [Data Science Immersive](http://www.galvanize.com/courses/data-science/) program. It's 12 weeks of kicking the \\*\\*\\*\\* out of data + the ability to call yourself a *Data Scientist* by the end. :) I'll see you there."
+    "If you enjoyed this tutorial, you will LOVE our [Data Science Immersive](http://www.galvanize.com/courses/data-science/) program. It is 12 weeks of intense training in:\n",
+    "\n",
+    " - statistics,\n",
+    " - machine learning, and\n",
+    " - software engineering.\n",
+    " \n",
+    "By the end you can confidently call yourself a *Jr Data Scientist*. I'll see you there! :)"
    ]
   },
   {
